wip
minimal frontend server with express
